@@ -4,6 +4,8 @@ version 0.83:
 	* Drag-and-drop buddy support for the Invite dialog (Stu Tomlinson)
 	* Drag-and-drop buddy support for the Pounce dialog (Stu Tomlinson)
 	* View Chat log available from the interface (Daniel Atallah)
+	* Ability to receive offline messages in character encodings
+	  other than ASCII (thanks to Nick Sukharev)
 
 	Bug Fixes:
 	* Compile with gtk 2.5.x (Gary Kramlich)
